k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: home
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: home
