k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: home
  labels:
    app: home
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jiggyjigs.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home
            port:
              number: 3000
